--- a/index.html
+++ b/index.html
@@ -32,23 +32,12 @@
             <label>Site URL</label>
             <input type="text" class="form-control" id="siteUrl" placeholder="Website URL" />
         </div>
-            <button type="submit" placeholder="Sumbit"></button>
+            <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
 
     <div class="row marketing">
-      <div class="col-lg-6">
-        <h4>Subheading</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-        <h4>Subheading</h4>
-        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-        <h4>Subheading</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-      </div>
-
-      <div class="col-lg-6">
+      <div class="col-lg-12">
         <h4>Subheading</h4>
         <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
@@ -61,14 +50,14 @@
     </div>
 
     <footer class="footer">
-      <p>&copy; 2016 Company, Inc.</p>
+      <p>&copy; 2016 Bookmarker, Inc.</p>
     </footer>
 
   </div> <!-- /container -->
 
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 
 </html>
