--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <link href="jumbotron-narrow.css" rel="stylesheet">
+
 </head>
 
-<body>
+<body onload="fetchBookmarks()">
 
   <div class="container">
     <div class="header clearfix">
